# troll-bot

./: .gitignore  .ruff.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main_test.py
app/core/: config.py  models_test.py
