[project]
name = "troll-bot"
version = "0.1.0"
description = "Бот-троллер."
authors = [
    {name = "Stepan Tikhomirov",email = "saltikhomirov@avito.ru"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "openai>=1.69.0,<2.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "pydantic>=2.7.1,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "python-telegram-bot (>=22.0,<23.0)",
    "telethon (>=1.39.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "numpy (>=2.2.4,<3.0.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.7"
respx = "^0.21.1" # Для мокирования HTTP-запросов
ruff = "^0.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
